Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-72542

fullValidate should not return a count of items

    • Storage Execution
    • Fully Compatible
    • v6.3, v6.0, v5.0, v4.4
    • Execution Team 2023-03-20

      We already count the number of index entries and documents in the index consistency checking. Currently, after executing WiredTIger verify we do an extra, superfluous iteration over all index entries just to recount them. We should remove this code, so we can speed up index validation.

            Assignee:
            yuhong.zhang@mongodb.com Yuhong Zhang
            Reporter:
            geert.bosch@mongodb.com Geert Bosch
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: