SERVER-72542 Avoid redundant index traversal during full validation