src/mongo/db/catalog/validate_results.h
@@ -45,7 +45,6 @@ struct IndexValidateResults {
     std::vector<std::string> errors;
     std::vector<std::string> warnings;
     int64_t keysTraversed = 0;
-    int64_t keysTraversedFromFullValidate = 0;
 };
 
 using ValidateResultsMap = std::map<std::string, IndexValidateResults>;
