src/mongo/db/storage/biggie/biggie_sorted_impl.cpp
@@ -513,7 +513,9 @@ void SortedDataInterface::fullValidate(OperationContext* opCtx,
         ++it;
         numKeys++;
     }
-    *numKeysOut = numKeys;
+    if (numKeysOut) {
+        *numKeysOut = numKeys;
+    }
 }
 
 bool SortedDataInterface::appendCustomStats(OperationContext* opCtx,
