src/mongo/db/storage/ephemeral_for_test/ephemeral_for_test_sorted_impl.cpp
@@ -1459,7 +1459,9 @@ void SortedDataInterfaceUnique::fullValidate(OperationContext* opCtx,
         numKeys += UniqueIndexData(it->second, _rsKeyFormat).size();
         ++it;
     }
-    *numKeysOut = numKeys;
+    if (numKeysOut) {
+        *numKeysOut = numKeys;
+    }
 }
 
 bool SortedDataInterfaceBase::appendCustomStats(OperationContext* opCtx,
@@ -1599,7 +1601,9 @@ void SortedDataInterfaceStandard::fullValidate(OperationContext* opCtx,
         ++numKeys;
         ++it;
     }
-    *numKeysOut = numKeys;
+    if (numKeysOut) {
+        *numKeysOut = numKeys;
+    }
 }
 
 std::unique_ptr<mongo::SortedDataInterface::Cursor> SortedDataInterfaceStandard::newCursor(
