src/mongo/db/storage/wiredtiger/wiredtiger_column_store.cpp
@@ -232,9 +232,6 @@ IndexValidateResults WiredTigerColumnStore::validate(OperationContext* opCtx, bo
     }
 
     WiredTigerIndexUtil::validateStructure(opCtx, _uri, results);
-    if (results.valid) {
-        results.keysTraversedFromFullValidate = numEntries(opCtx);
-    }
 
     return results;
 }
